Fixed overflow issues
1. Removed duplicated rule
2. Fixed scroll issue

--- a/app/src/main/res/css/modules/column.sass
+++ b/app/src/main/res/css/modules/column.sass
@@ -39,13 +39,13 @@
     margin-top: 5rem
     font-size: 1.3rem
   .items_container
-    overflow-x: hidden
-    overflow-y: scroll
-    overflow-x: hidden
+    position: relative
+    overflow: auto
+    overflow-x: visible
     transform: translateZ(0)
     -webkit-transform: translateZ(0)
-    padding: 0rem 0rem 1rem 0rem
-    height: calc(100vh - 2.8rem - 1.5rem)
+    padding: 0 10px
+    height: 100vh
   .column_topbar
     height: 30px
     overflow: hidden
